--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@chainlink/contracts": "^0.4.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.7.3",
+    "bn.js": "^5.2.1",
     "hardhat-deploy": "^0.11.10",
     "jest": "^28.1.1",
     "sha256": "^0.2.0",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "web3": "^1.7.5"
   }
 }
