--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/mocha": "^9.1.1",
     "chai": "^4.3.6",
@@ -19,9 +20,9 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.2",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.7.3",
     "bn.js": "^5.2.1",
+    "dotenv": "^16.0.2",
     "hardhat-deploy": "^0.11.10",
     "jest": "^28.1.1",
     "sha256": "^0.2.0",
